--- a/index.html
+++ b/index.html
@@ -2,28 +2,108 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Sonic</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Links:</title>
     <style>
-        html, body {
+        * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            min-height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+        }
+
+        .container {
+            max-width: 600px;
             width: 100%;
-            height: 100%;
-            // background-color: #000;
+            text-align: center;
+        }
+
+        .profile-img {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            background: #fff;
+            margin: 0 auto 20px;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
             display: flex;
             align-items: center;
             justify-content: center;
+            font-size: 48px;
         }
 
-        img {
-            max-width: 100%;
-            max-height: 100%;
-            object-fit: contain;
+        h1 {
+            color: #fff;
+            font-size: 28px;
+            margin-bottom: 10px;
+            font-weight: 600;
+        }
+
+        .bio {
+            color: rgba(255, 255, 255, 0.9);
+            font-size: 16px;
+            margin-bottom: 40px;
+        }
+
+        .links {
+            display: flex;
+            flex-direction: column;
+            gap: 16px;
+        }
+
+        .link-button {
+            background: rgba(255, 255, 255, 0.95);
+            color: #333;
+            text-decoration: none;
+            padding: 18px 30px;
+            border-radius: 12px;
+            font-size: 16px;
+            font-weight: 500;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            display: block;
+        }
+
+        .link-button:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
+            background: #fff;
+        }
+
+        .link-button:active {
+            transform: translateY(-1px);
+        }
+
+        @media (max-width: 480px) {
+            h1 {
+                font-size: 24px;
+            }
+
+            .link-button {
+                padding: 16px 24px;
+                font-size: 15px;
+            }
         }
     </style>
 </head>
 <body>
-    <img src="sonic-faz.png" alt="sonic fazendo">
+    <div class="container">
+        <div class="profile-img">👤</div>
+        
+        <h1>ABU BH</h1>
+        <p class="bio">Fé que pensa, razão que crê</p>
+        
+        <div class="links">
+            <a href="#" class="link-button">Instagram</a>
+        </div>
+    </div>
 </body>
 </html>
-
