--- a/sonic/index.html
+++ b/sonic/index.html
@@ -8,22 +8,32 @@
             margin: 0;
             padding: 0;
             width: 100%;
-            height: 100%;
-            // background-color: #000;
+            height: 100vh;
+            background-color: #e4e2fb;
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: flex-start;
+            gap: 20px;
+            padding: 20px;
         }
 
         img {
-            max-width: 100%;
-            max-height: 100%;
+            max-width: 300px;
+            max-height: 300px;
             object-fit: contain;
+        }
+
+        .texto {
+            text-align: center;
         }
     </style>
 </head>
 <body>
     <img src="sonic-faz.png" alt="sonic fazendo">
+    <div class="texto">
+        <h1>Sonic x ALC quem ganha?</h1>
+        <p>(com ctz o sonic)</p>
+    </div>
 </body>
 </html>
 
