--- a/sonic/index.html
+++ b/sonic/index.html
@@ -33,6 +33,7 @@
     <div class="texto">
         <h1>Sonic x ALC quem ganha?</h1>
         <p>(com ctz o sonic)</p>
+        <a href="calculadora.html">Calcule seu nivel de adultisse!!</a>
     </div>
 </body>
 </html>
